// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`handleCategoriesScope > custom plugins, custom categories > customPluginCustomCategories 1`] = `
{
  "import/no-duplicates": "off",
  "import/no-named-as-default": "off",
  "import/no-named-as-default-member": "off",
  "import/no-self-import": "off",
}
`;

exports[`handleCategoriesScope > custom plugins, default categories > customPluginDefaultCategories 1`] = `
{
  "unicorn/no-await-in-promise-methods": "off",
  "unicorn/no-document-cookie": "off",
  "unicorn/no-empty-file": "off",
  "unicorn/no-invalid-remove-event-listener": "off",
  "unicorn/no-new-array": "off",
  "unicorn/no-single-promise-in-promise-methods": "off",
  "unicorn/no-thenable": "off",
  "unicorn/no-unnecessary-await": "off",
  "unicorn/no-useless-fallback-in-spread": "off",
  "unicorn/no-useless-length-check": "off",
  "unicorn/no-useless-spread": "off",
  "unicorn/prefer-set-size": "off",
  "unicorn/prefer-string-starts-ends-with": "off",
}
`;

exports[`handleCategoriesScope > default plugins (react, unicorn, typescript), default categories > defaultPluginDefaultCategories 1`] = `
{
  "@typescript-eslint/no-dupe-class-members": "off",
  "@typescript-eslint/no-duplicate-enum-values": "off",
  "@typescript-eslint/no-extra-non-null-assertion": "off",
  "@typescript-eslint/no-loss-of-precision": "off",
  "@typescript-eslint/no-misused-new": "off",
  "@typescript-eslint/no-non-null-asserted-optional-chain": "off",
  "@typescript-eslint/no-this-alias": "off",
  "@typescript-eslint/no-unsafe-declaration-merging": "off",
  "@typescript-eslint/no-unused-vars": "off",
  "@typescript-eslint/no-useless-empty-export": "off",
  "@typescript-eslint/no-wrapper-object-types": "off",
  "@typescript-eslint/prefer-as-const": "off",
  "@typescript-eslint/triple-slash-reference": "off",
  "react/jsx-key": "off",
  "react/jsx-no-duplicate-props": "off",
  "react/jsx-no-target-blank": "off",
  "react/jsx-no-undef": "off",
  "react/jsx-props-no-spread-multi": "off",
  "react/no-children-prop": "off",
  "react/no-danger-with-children": "off",
  "react/no-direct-mutation-state": "off",
  "react/no-find-dom-node": "off",
  "react/no-is-mounted": "off",
  "react/no-render-return-value": "off",
  "react/no-string-refs": "off",
  "react/void-dom-elements-no-children": "off",
  "unicorn/no-await-in-promise-methods": "off",
  "unicorn/no-document-cookie": "off",
  "unicorn/no-empty-file": "off",
  "unicorn/no-invalid-remove-event-listener": "off",
  "unicorn/no-new-array": "off",
  "unicorn/no-single-promise-in-promise-methods": "off",
  "unicorn/no-thenable": "off",
  "unicorn/no-unnecessary-await": "off",
  "unicorn/no-useless-fallback-in-spread": "off",
  "unicorn/no-useless-length-check": "off",
  "unicorn/no-useless-spread": "off",
  "unicorn/prefer-set-size": "off",
  "unicorn/prefer-string-starts-ends-with": "off",
}
`;
